---------------------------------------------------------------------
Release 0.9.8
---------------------------------------------------------------------
NEW FEATURES:
* Added luga.dom.ready()
* Added luga.data.PagedView
* Added luga.data.widgets.PagingBar

NOTES:
* Updated documentation

CHANGES:
* Changed API for traits, regions and luga.data.widgets, from jQuery to DOM
* Removed luga.data.widgets.ShowMoreScrolling
* Removed Ajaxform
* Removed luga.form.toHash()
* Removed luga.isArray()
* Removed luga.isFunction()

---------------------------------------------------------------------
Release 0.9.7
---------------------------------------------------------------------
NEW FEATURES:
* luga.Notifier now allows more granular control distinguishing between "generic" and "event" observers

NOTES:
* Luga Data Region: Added documentation on using event delegation

CHANGES:
* luga.merge does not copy properties inherited through the prototype chain
* Updated docs
* Updated dist with jQuery 3.2.1
* Updated testing libraries

BUG FIXES:
* luga.localStorage works if numbers/non-strings are used as path

---------------------------------------------------------------------
Release 0.9.6
---------------------------------------------------------------------
NEW FEATURES:
* Added luga.form.toMap() to replace luga.form.toHash()
* Added luga.string.queryToMap

NOTES:
* Plenty of improvements in documentation

CHANGES:
* luga.form.toHash() is deprecated

---------------------------------------------------------------------
Release 0.9.5
---------------------------------------------------------------------
NEW FEATURES:
* Added luga.data.region.initRegions()
* luga.validator.initForms now supports an optional rootNode parameter
* luga.ajaxform.initForms now supports an optional rootNode parameter
* Added luga.data.region.setUp({
     autoregister: true|false
  })
* Added luga.data.ChildXmlDataSet
* Added luga.localStorage.retrieve() and luga.localStorage.persist()

NOTES: